# rpi-access

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.sh  uninstall.sh
.claude/rule/: commits.md
config/: dnsmasq.conf  hostapd.conf  rpi-access.conf
config/systemd/: rpi-access.service
docs/: api.md  architecture.md  boot_flow.md  troubleshooting.md
scripts/: ap_start.sh  ap_stop.sh  healthcheck.sh
src/rpi_access/: __init__.py  __main__.py  app.py
src/rpi_access/core/: __init__.py  boot.py  config.py  exceptions.py  logger.py  state.py
src/rpi_access/portal/: __init__.py  captive.py  routes.py
src/rpi_access/security/: __init__.py  credentials.py  validator.py
src/rpi_access/wifi/: __init__.py  _nmcli.py  ap.py  client.py  eth.py  scanner.py
static/css/: main.css  themes.css
static/js/: app.js  networks.js  theme.js
templates/: base.html  direct_mode.html  error.html  onboarding.html
tests/: conftest.py  test_ap.py  test_credentials.py  test_eth.py  test_routes.py  test_scanner.py  test_scanner_cache.py  test_state.py  test_validator.py
